--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,2 +1,16 @@
-div.rounded
+div.rounded style = "height: 200px"
   p Меню
+  p 
+    = notice
+  p 
+    = alert
+
+
+  - if user_signed_in?
+     ul
+       li 
+         p Здравствуйте, #{current_user.email}!  
+       li = link_to 'Выйти', destroy_user_session_path, :method => :delete
+  - else
+    =link_to "Войти", new_user_session_path, id: "home", title: "Войти" 
+  //= link_to "Войти", new_user_session_path, id: "home", title: "Войти"   
