User forms styles

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -11,6 +11,10 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require_reset
+ *= require_global
+ *= require_user
  *= require_pages
+ *= require_scaffolds
  *= require_self
  */
