--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -1,5 +1,10 @@
-$text-color: #006400//#89CC03
+$text-color: #000000
 $bg-color: #FFFFF0
+
+$notice-bg-color: #98FB98 //#90EE90
+$notice-text-color: #3CB371 //#228B22
+$alert-bg-color: #FFDAB9
+$alert-text-color: #FF6347
 
 h1
   font-size: 170%
@@ -27,15 +32,3 @@ p
   -webkit-border-radius: $radius
   border-radius:         $radius  
 
-.container 
-  padding: 0 20px
-  margin: 0 auto
-  max-width: 1000px
-  min-width: 700px
-
-.rounded
-  border: 1px solid
-  margin-bottom: 5px  
-  padding: 5px
-  border: 1px solid $text-color
-  @include border_radius(5px)   
