--- a/app/assets/stylesheets/pages.sass
+++ b/app/assets/stylesheets/pages.sass
@@ -65,8 +65,9 @@
   color: $notice-text-color
 
 #error_explanation
+  width: 720px
   border: 1px solid
-  margin-bottom: 5px  
+  margin: 0 auto 
   padding: 5px
   border: 1px solid $alert-text-color
   background-color: $alert-bg-color
