--- a/app/assets/stylesheets/user.sass
+++ b/app/assets/stylesheets/user.sass
@@ -6,7 +6,13 @@
 .user-registration-form
   width: 360px
   height: auto
-  margin-top: 24px   
+  margin-top: 24px  
+
+.user-form
+  width: 360px
+  height: auto
+  //margin-top: 24px 
+  margin: 24px auto 0 
   
 .input-user
   margin: 5px
