--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,11 +1,10 @@
 div.rounded style = "height: 200px"
-  p Меню
-
   - if user_signed_in?
      ul
        li 
          p Здравствуйте, #{current_user.email}!  
+       li = link_to "Редактировать личные данные", edit_registration_path(current_user)  
        li = link_to 'Выйти', destroy_user_session_path, :method => :delete
   - else
-    =link_to "Войти", new_user_session_path, id: "home", title: "Войти" 
+    =link_to "Войти", new_user_session_path
   //= link_to "Войти", new_user_session_path, id: "home", title: "Войти"   
