--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,6 @@ html
   body 
     .container
       = render 'layouts/header'
-      //= render 'layouts/messages'
+      = render 'layouts/messages'
       == yield
       = render 'layouts/footer'
