Complete devise flows

--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -11,7 +11,7 @@
   = link_to "Не получили письмо о регистрации?", new_confirmation_path(resource_name), class: 'control-left control-middle'
 
 - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' 
-  = link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) 
+  = link_to "Не получили письмо о разблокировке?", new_unlock_path(resource_name), class: 'control-left control-middle'
   br
 
 - if devise_mapping.omniauthable?
