--- a/app/views/devise/mailer/confirmation_instructions.html.slim
+++ b/app/views/devise/mailer/confirmation_instructions.html.slim
@@ -1,5 +1,5 @@
 p Здравствуйте!
 
-p Вы можете зайти в свой личный кабинет #{@email} по ссылке ниже:
+p Вы можете зайти в свой личный кабинет по ссылке ниже (логин #{@email}):
 
 p = link_to 'Подтвердить регистрацию', confirmation_url(@resource, confirmation_token: @token)
