--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,8 +13,11 @@
  *= require_tree .
  *= require_reset
  *= require_global
- *= require_user
+ *= require_main
  *= require_pages
  *= require_scaffolds
  *= require_self
  */
+ 
+@import "bootstrap-sprockets"
+@import "bootstrap"
