--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,15 +1,16 @@
-div.rounded
-  div.user-form
-    h2 Ввод нового пароля
+div.row.rounded
+  div.center.responsive
+    h2.text-center Ввод нового пароля
 
-    div
-      = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| 
-        = devise_error_messages!
-        = f.hidden_field :reset_password_token
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| 
+      = devise_error_messages!
+      = f.hidden_field :reset_password_token
 
-        = f.password_field :password, autofocus: true, autocomplete: "off", placeholder: "Пароль", class: 'input-user'
-        = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Подтверждение пароля", class: 'input-user'
-
-        div.row.footer-btn
-          = f.submit "Сохранить", class: 'control-right control-middle'
-      
+      div.form-group
+        = f.label 'Пароль' 
+        = f.password_field :password, autofocus: true, autocomplete: "off", placeholder: "Пароль", class: 'form-control'
+      div.form-group  
+        = f.label 'Подтверждение пароля'
+        = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Подтверждение пароля", class: 'form-control'
+      div.form-group
+        = f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
