--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -1,5 +1,6 @@
 $text-color: #000000
 $bg-color: #FFFFF0
+$border-color: #808080
 
 $notice-bg-color: #98FB98 //#90EE90
 $notice-text-color: #3CB371 //#228B22
