--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -41,21 +41,28 @@
 /<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 /<%= link_to "Back", :back %>
-div.rounded
-  div.user-form
-    h2 Редактировать личные данные 
+div.row.rounded
+  div.center.responsive
+    h2.text-center Редактировать личные данные 
 
-    div
-      = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| 
-        = devise_error_messages!
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| 
+      = devise_error_messages!
 
-        = f.email_field :email, autofocus: true, placeholder: "Логин", class: 'input-user'
-        = f.password_field :password, autocomplete: "off", placeholder: "Пароль", class: 'input-user'
-        = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Подтверждение пароля", class: 'input-user'
-        = f.password_field :current_password, autocomplete: "off", placeholder: "Текущий пароль", class: 'input-user'
-
-        div.row.footer-btn
-          = f.submit "Сохранить", class: 'control-right control-middle'
-  
-  = link_to "Удалить аккаунт", registration_path(resource_name), data: { confirm: "Вы уверены?" }, method: :delete 
-  = link_to "Главная страница", :back        
+      div.form-group
+        = f.label 'Логин' 
+        = f.email_field :email, autofocus: true, placeholder: "Логин", class: 'form-control'
+      div.form-group
+        = f.label 'Пароль'  
+        = f.password_field :password, autocomplete: "off", placeholder: "Пароль", class: 'form-control'
+      div.form-group
+        = f.label 'Подтверждение пароля'  
+        = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Подтверждение пароля", class: 'form-control'
+      div.form-group
+        = f.label 'Текущий пароль'  
+        = f.password_field :current_password, autocomplete: "off", placeholder: "Текущий пароль", class: 'form-control'
+      div.form-group 
+        = f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
+      div.form-group.rounded  
+        = link_to "Удалить аккаунт", registration_path(resource_name), data: { confirm: "Вы уверены?" }, method: :delete 
+        bk
+        = link_to "Главная страница", :back
