--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,17 +1,20 @@
-div.rounded
-  div.user-registration-form.control-center
-    div.row.controls-center
-      h2 Регистрация
+div.row.rounded
+  div.center.responsive
+    h2.text-center Регистрация
 
-    div.row.controls-center
-      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
 
-        = devise_error_messages!
-
-        = f.email_field :email, autofocus: true, placeholder: "Логин", class: 'input-user'
-        = f.password_field :password, autocomplete: "off", placeholder: "Пароль", class: 'input-user'
-        = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Подтверждение пароля", class: 'input-user'
-
-        div.row.footer-btn
-          = f.submit "Сохранить", class: 'control-right control-middle'
-          = render "devise/shared/links"
+      div.form-group
+        = f.label 'Логин' 
+        = f.email_field :email, autofocus: true, placeholder: "Логин", class: 'form-control'
+      div.form-group
+        = f.label 'Пароль'  
+        = f.password_field :password, autocomplete: "off", placeholder: "Пароль", class: 'form-control'
+      div.form-group
+        = f.label 'Подтверждение пароля'  
+        = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Подтверждение пароля", class: 'form-control'
+      div.form-group 
+        = f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
+      div.form-group.rounded  
+        = render "devise/shared/links"
