--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,21 +1,25 @@
 - if controller_name != 'sessions'
-  = link_to "Войти", new_session_path(resource_name), class: 'control-left control-middle'
-
-- if devise_mapping.registerable? && controller_name != 'registrations' 
-  = link_to "Регистрация", new_registration_path(resource_name), class: 'control-left control-middle'
-
-- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' 
-  = link_to "Забыли пароль?", new_password_path(resource_name), class: 'control-left control-middle'
-
-- if devise_mapping.confirmable? && controller_name != 'confirmations' 
-  = link_to "Не получили письмо о регистрации?", new_confirmation_path(resource_name), class: 'control-left control-middle'
-
-- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' 
-  = link_to "Не получили письмо о разблокировке?", new_unlock_path(resource_name), class: 'control-left control-middle'
+  = link_to "Войти", new_session_path(resource_name)
   br
 
-- if devise_mapping.omniauthable?
-  - resource_class.omniauth_providers.each do |provider| 
-    = link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) 
-    br
-  end
+- if devise_mapping.registerable? && controller_name != 'registrations' 
+  = link_to "Регистрация", new_registration_path(resource_name)
+  br
+
+- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' 
+  = link_to "Забыли пароль?", new_password_path(resource_name)
+  br
+
+- if devise_mapping.confirmable? && controller_name != 'confirmations' 
+  = link_to "Не получили письмо о регистрации?", new_confirmation_path(resource_name)
+  br
+
+- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' 
+  = link_to "Не получили письмо о разблокировке?", new_unlock_path(resource_name)
+  br
+
+/ - if devise_mapping.omniauthable?
+/   - resource_class.omniauth_providers.each do |provider| 
+/     = link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) 
+/     br
+/   end
