--- a/app/views/devise/unlocks/new.html.slim
+++ b/app/views/devise/unlocks/new.html.slim
@@ -1,33 +1,15 @@
-div.rounded
-  div.user-form
-    h2 Разблокировать учетную запись
+div.row.rounded
+  div.center.responsive
+    h2.text-center Разблокировать учетную запись
 
-    div
-      = form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f|
-        = devise_error_messages!
-
-        = f.email_field :email, autofocus: true, placeholder: "Логин", class: 'input-user'
-
-        div.row.footer-btn
-          = f.submit "Разблокировать", class: 'control-right control-middle'
-          = render "devise/shared/links"
+    = form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f|
+      = devise_error_messages!
       
+      div.form-group
+        = f.label 'Логин' 
+        = f.email_field :email, autofocus: true, placeholder: "Логин", class: 'form-control'
 
-
-//<h2>Resend unlock instructions</h2>
-
-//<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-//  <%= devise_error_messages! %>
-
-//  <div class="field">
-//    <%= f.label :email %><br />
-//    <%= f.email_field :email, autofocus: true %>
-//  </div>
-
-//  <div class="actions">
-//    <%= f.submit "Resend unlock instructions" %>
-//  </div>
-//<% end %>
-
-//<%= render "devise/shared/links" %>
-
+      div.form-group
+          = f.submit "Разблокировать", class: 'btn btn-primary btn-lg btn-block'
+      div.form-group.rounded  
+        = render "devise/shared/links"
