--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,6 +1,2 @@
-div.rounded
-  div.rounded style="height: 500px"
-  	p Картинка или слайдер
-  div.rounded style="height: 200px"
-  	p Описание товара с кнопкой купить
-
+div.row.rounded style = "height: 500px"
+  p Картинка
