--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -5,7 +5,7 @@ $border-color: #808080
 $notice-bg-color: #98FB98 //#90EE90
 $notice-text-color: #3CB371 //#228B22
 $alert-bg-color: #FFDAB9
-$alert-text-color: #FF6347
+$alert-text-color: #A94442
 
 h1
   font-size: 170%
