--- a/app/assets/stylesheets/pages.sass
+++ b/app/assets/stylesheets/pages.sass
@@ -21,5 +21,8 @@
 .field_with_errors input
   border: 1px solid $alert-text-color !important
 
+.glyphicon-with-text:before
+  vertical-align: middle
 
-
+ul.alert-list
+  margin-left: 48px
