--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -13,4 +13,7 @@ div.row.rounded
         = f.label 'Подтверждение пароля'
         = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Подтверждение пароля", class: 'form-control'
       div.form-group
-        = f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
+        /= f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
+        = button_tag type: 'submit', class: "btn btn-primary btn-lg btn-block" do
+          span.glyphicon.glyphicon-with-text.glyphicon-lock.pull-left
+          span Сохранить
