--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -9,6 +9,9 @@ div.row.rounded
         = f.label 'Логин' 
         = f.email_field :email, autofocus: true, placeholder: "E-mail", class: 'form-control'
       div.form-group
-        = f.submit "Восстановить", class: 'btn btn-primary btn-lg btn-block'
+        /= f.submit "Восстановить", class: 'btn btn-primary btn-lg btn-block'
+        = button_tag type: 'submit', class: "btn btn-primary btn-lg btn-block" do
+          span.glyphicon.glyphicon-with-text.glyphicon-envelope.pull-left
+          span Восстановить       
       div.form-group.rounded
         = render "devise/shared/links"
