--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -61,8 +61,11 @@ div.row.rounded
         = f.label 'Текущий пароль'  
         = f.password_field :current_password, autocomplete: "off", placeholder: "Текущий пароль", class: 'form-control'
       div.form-group 
-        = f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
+        /= f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
+        = button_tag type: 'submit', class: "btn btn-primary btn-lg btn-block" do
+          span.glyphicon.glyphicon-with-text.glyphicon-user.pull-left
+          span Сохранить
       div.form-group.rounded  
         = link_to "Удалить аккаунт", registration_path(resource_name), data: { confirm: "Вы уверены?" }, method: :delete 
-        bk
+        br
         = link_to "Главная страница", :back
