--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -15,6 +15,10 @@ div.row.rounded
         = f.label 'Подтверждение пароля'  
         = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Подтверждение пароля", class: 'form-control'
       div.form-group 
-        = f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
+        //= f.submit "Сохранить", class: 'btn btn-primary btn-lg btn-block'
+        = button_tag type: 'submit', class: "btn btn-primary btn-lg btn-block" do
+          span.glyphicon.glyphicon-with-text.glyphicon-user.pull-left
+          span Сохранить
+
       div.form-group.rounded  
         = render "devise/shared/links"
