--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -4,3 +4,14 @@
   padding: 3px
   border: 1px solid $border-color
   @include border_radius(5px)   
+
+//body
+  //background: image-url("/images/background.jpg")
+  //background-repeat: no-repeat
+  //background-size: 100%
+  //-webkit-background-size: cover
+  //-moz-background-size: cover
+  //-o-background-size: cover
+
+//html body 
+//  background-image: image-url('background.jpg')
