--- a/app/assets/stylesheets/pages.sass
+++ b/app/assets/stylesheets/pages.sass
@@ -4,6 +4,16 @@
 
 @import global
 
+// Header
+.header-logo
+  width: 100%
+
+ul.phones
+  margin: 0
+  li
+    list-style-type: none    
+
+// Authentification forms
 .center
   margin: auto
   top: 0
@@ -24,5 +34,7 @@
 .glyphicon-with-text:before
   vertical-align: middle
 
+// Messages
 ul.alert-list
   margin-left: 48px
+
