--- a/app/assets/stylesheets/pages.sass
+++ b/app/assets/stylesheets/pages.sass
@@ -8,10 +8,15 @@
 .header-logo
   width: 100%
 
-ul.phones
+//ul.phones
+//  margin: 0
+//  li
+//    list-style-type: none    
+ul
   margin: 0
   li
     list-style-type: none    
+
 
 // Authentification forms
 .center
