--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,6 +1,7 @@
 div.row
   div.col-xs-12
-    img.header-logo src="/images/header_logo.png"
+    = link_to "/" do
+      img.header-logo src="/images/header_logo.png"
       
 div.row
   div.col-xs-12
